54: Remove the Portal configurations from the Spring profiles and fetch them from the PortalConfigurationService
Signed-off-by: Paul-Erik Törrönen <poltsi@poltsi.fi>